# scanner

./: .gitignore  CMakeLists.txt  README.md  generate_test_directory.py  generator.py  main.cpp
include/: AnalysisResult.h  Dispatcher.h  FileType.h  FileTypes.h  Parser.h  Pattern.h  ResultTypes.h  Scanner.h
src/: AnalysisResult.cpp  Dispatcher.cpp  FileType.cpp  FileTypes.cpp  Parser.cpp  Scanner.cpp
